2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_monitor_timeout_cb),
	(ephy_file_monitor_cb):
	* lib/ephy-file-helpers.h:

	Add event type to the callback.

	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/EphyUtils.h:
	
	New function, like NS_NewFileURI (which we can't use since
	nsNetUtil.h conflicts with embed strings).

	* embed/mozilla/mozilla-embed-single.cpp:
	* embed/mozilla/mozilla-notifiers.cpp:

	Check that the user CSS file exists before registering it.
	Also handle file-deleted events.

	* src/bookmarks/ephy-bookmarks-menu.c: (ephy_bookmarks_menu_build):
	* src/bookmarks/ephy-topics-palette.c:
	(ephy_topics_palette_constructor),
	(ephy_topics_palette_class_init):

	Build fixes.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Fix compile with libgnome HEAD.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.5.1 ===

	* NEWS:
	* configure.ac:
	* data/Makefile.am:
	* data/chrome/Makefile.am:
	* po/POTFILES.in:
	R src/bookmarks/ephy-new-bookmark.c:
	R src/bookmarks/ephy-new-bookmark.h:
	R src/bookmarks/ephy-topics-selector.c:
	R src/bookmarks/ephy-topics-selector.h:

	Fix the tarball.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.5 ===

	* configure.ac:
	* data/chrome/Makefile.am:

	Updates.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* data/chrome/epiphany.manifest.in:

	Fix number of /'s in URI.

	* data/epiphany.schemas.in:

	Add new entries.
		
	* embed/mozilla/EphyAboutModule.cpp:
	
	Fix title.

	* data/glade/prefs-dialog.glade:
	* embed/ephy-embed-prefs.h:
	* embed/mozilla/mozilla-embed-single.cpp:
	* embed/mozilla/mozilla-notifiers.cpp:
	* embed/mozilla/mozilla-notifiers.h:
	* lib/eel-gconf-extensions.c: (eel_gconf_unset_key),
	(eel_gconf_notify):
	* lib/eel-gconf-extensions.h: