@@ -1,5 +1,12 @@
 2006-01-17  Christian Persch  <chpe@cvs.gnome.org>
 
+	* data/glade/prefs-dialog.glade:
+	* embed/mozilla/mozilla-notifiers.cpp:
+
+	Fix leaks, minor cleanups.
+
+2006-01-17  Christian Persch  <chpe@cvs.gnome.org>
+
 	* lib/ephy-file-helpers.c: (ephy_file_monitor_timeout_cb),
 	(ephy_file_monitor_cb):
 	* lib/ephy-file-helpers.h:
